--- a/portifolio.html
+++ b/portifolio.html
@@ -59,26 +59,35 @@
                 <a class="caixa__link" href="https://adrianor85.github.io/projeto-cordel" target="_blank">
                     <div class="caixa__conteudo">
                         <h3 class="caixa__conteudo___titulo">Página Cordel</h3>
-                        <p class="caixa__conteudo___texto">Front End</p>
+                        <p class="caixa__conteudo___texto">HTML & CSS</p>
                         <p class="caixa__conteudo--texto">Prática</p>
                     </div>
                 </a>
             </article>
             <article class="caixa">
-                <a class="caixa__link" href="https://adrianor85.github.io/Pet-Shop/" target="_blank">
+                <a class="caixa__link" href="https://adrianor85.github.io/pet-shop" target="_blank">
                     <div class="caixa__conteudo">
                         <h3 class="caixa__conteudo___titulo">Pet-Shop</h3>
-                        <p class="caixa__conteudo___texto">Front End</p>
+                        <p class="caixa__conteudo___texto">HTML & CSS</p>
                         <p class="caixa__conteudo--texto">Prática</p>
                     </div>
                 </a>
             </article>
             <article class="caixa">
-                <a class="caixa__link" href="https://adrianor85.github.io/flexbox/" target="_blank">
+                <a class="caixa__link" href="https://adrianor85.github.io/flexbox" target="_blank">
                     <div class="caixa__conteudo">
                         <h3 class="caixa__conteudo___titulo">Alurinha</h3>
-                        <p class="caixa__conteudo___texto">Front End - Flexbox</p>
+                        <p class="caixa__conteudo___texto">HTML & CSS - Flexbox</p>
                         <p class="caixa__conteudo--texto">Desenvolvido no Curso</p>
+                    </div>
+                </a>
+            </article>
+            <article class="caixa">
+                <a class="caixa__link" href="https://adrianor85.github.io/Calculadora" target="_blank">
+                    <div class="caixa__conteudo">
+                        <h3 class="caixa__conteudo___titulo">Calculadora</h3>
+                        <p class="caixa__conteudo___texto">JavaScript</p>
+                        <p class="caixa__conteudo--texto">Prática</p>
                     </div>
                 </a>
             </article>
