adicionado o projeto calculadora

--- a/portifolio.html
+++ b/portifolio.html
@@ -74,16 +74,7 @@
                 </a>
             </article>
             <article class="caixa">
-                <a class="caixa__link" href="https://adrianor85.github.io/flexbox" target="_blank">
-                    <div class="caixa__conteudo">
-                        <h3 class="caixa__conteudo___titulo">Alurinha</h3>
-                        <p class="caixa__conteudo___texto">HTML & CSS - Flexbox</p>
-                        <p class="caixa__conteudo--texto">Desenvolvido no Curso</p>
-                    </div>
-                </a>
-            </article>
-            <article class="caixa">
-                <a class="caixa__link" href="https://adrianor85.github.io/Calculadora" target="_blank">
+                <a class="caixa__link" href="https://adrianor85.github.io/calculadora/" target="_blank">
                     <div class="caixa__conteudo">
                         <h3 class="caixa__conteudo___titulo">Calculadora</h3>
                         <p class="caixa__conteudo___texto">JavaScript</p>
