Adicionando o projeto movie seat booking

--- a/portifolio.html
+++ b/portifolio.html
@@ -82,6 +82,15 @@
                     </div>
                 </a>
             </article>
+            <article class="caixa">
+                <a class="caixa__link" href="https://adrianor85.github.io/movie-seat-booking/" target="_blank">
+                    <div class="caixa__conteudo">
+                        <h3 class="caixa__conteudo___titulo">Movie Seat Booking</h3>
+                        <p class="caixa__conteudo___texto">JavaScript</p>
+                        <p class="caixa__conteudo--texto">Prática</p>
+                    </div>
+                </a>
+            </article>
             
         </div>
     </main>
